accessible/base/AccEvent.h
@@ -115,8 +115,7 @@ class AccEvent {
   /**
    * Reference counting and cycle collection.
    */
-  NS_INLINE_DECL_CYCLE_COLLECTING_NATIVE_REFCOUNTING(AccEvent)
-  NS_DECL_CYCLE_COLLECTION_NATIVE_CLASS(AccEvent)
+  NS_INLINE_DECL_REFCOUNTING(AccEvent);
 
  protected:
   virtual ~AccEvent() {}
